fix(md-notices): spacing and general layout
The first BR tag now is hidden by CSS, removing it by JS didn't work as expected.
`md-alert` is no longer a flex container, as it screws up the layout.

--- a/assets/custom-techy/css/markdown-notices.css
+++ b/assets/custom-techy/css/markdown-notices.css
@@ -81,12 +81,13 @@ blockquote.md-caution .md-alert-title svg {
 }
 
 .md-alert {
-  display: flex;
-  flex-direction: column;
   padding: 1rem;
   border-left-width: 4px;
   border-left-style: solid;
   box-sizing: border-box;
+}
+.md-alert br:first-of-type {
+  display: none;
 }
 
 .md-alert-title {
